force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically set when creating a deposit in the New Deposit Workflow. This field is a lookup to the relationship associated with the deposit.</description>
    <label>Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deposits</relationshipLabel>
    <relationshipName>Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>