force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Account_To_Receive_Accrued_Interest__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account_To_Receive_Accrued_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Administrators populate this lookup field with the Account that receives the accrued interest from a time-based Deposit Account.</description>
    <inlineHelpText>Enter the Account that receives the accrued interest.</inlineHelpText>
    <label>Account to Receive Accrued Interest</label>
    <referenceTo>LLC_BI__Deposit__c</referenceTo>
    <relationshipLabel>Accrued Interest Deposit Accounts</relationshipLabel>
    <relationshipName>Accrued_Interest_Deposit_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>