force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Annual_Percentage_Yield__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Annual_Percentage_Yield__c</fullName>
    <description>The APY (Annual Percentage Yield %) on a deposit account.</description>
    <label>Annual Percentage Yield</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>