force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__APY__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__APY__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is the Annual Percentage Yield.</description>
    <inlineHelpText>Annual Percentage Yield</inlineHelpText>
    <label>APY</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>