force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Average_Deposit_Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Average_Deposit_Account_Balance__c</fullName>
    <description>Average daily balance of the deposit account over the course of a month.</description>
    <label>Average Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>