force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Billing_Frequency__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It specifies how often billing for the safe deposit box will occur.</description>
    <inlineHelpText>Specifies how often billing for the safe deposit box will occur.</inlineHelpText>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semiannually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Biannually</fullName>
            </value>
            <value>
                <fullName>Monthly on the lease date anniversary</fullName>
            </value>
            <value>
                <fullName>Yearly on the lease date anniversary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>