force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Billing_Type__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It describes how the billing for the safe deposit box is communicated to the lessee.</description>
    <inlineHelpText>Describes how the billing for the safe deposit box will be communicated to the lessee.</inlineHelpText>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Give Notice</fullName>
            </value>
            <value>
                <fullName>Debit Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>