force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__CESA_Responsible_Individual_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__CESA_Responsible_Individual_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true, the designated beneficiary of a CESA becomes the responsible individual at age of maturity.</description>
    <inlineHelpText>If true the Designated Beneficiary of a CESA will become the Responsible Individual at age of majority.</inlineHelpText>
    <label>CESA Responsible Individual Indicator</label>
    <type>Checkbox</type>
</CustomField>