force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Change_Designated_Beneficiary_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Change_Designated_Beneficiary_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true, the responsible party on the CESA may change the designated beneficiary.</description>
    <inlineHelpText>If true the Responsible Party on the CESA may change the Designated Beneficiary.</inlineHelpText>
    <label>Change Designated Beneficiary Indicator</label>
    <type>Checkbox</type>
</CustomField>