force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Death_Before_Required_Beginning__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Death_Before_Required_Beginning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true the deceased IRA owner&apos;s death occurred before his/her required beginning date (RBD).</description>
    <inlineHelpText>If true the deceased IRA owner&apos;s death occurred before his/her required beginning date (RBD).</inlineHelpText>
    <label>Death Before Required Beginning</label>
    <type>Checkbox</type>
</CustomField>