force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Deposit_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Deposit_Account_Type__c</fullName>
    <description>Populate this picklist field to indicate the deposit account type. If creating new accounts via a core integration, this field is automatically populated. Otherwise, the field is manually populated during the deposit account opening workflow.</description>
    <label>Deposit Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Money Market Savings</fullName>
            </value>
            <value>
                <fullName>Money Market Checking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>