force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Distribution_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Distribution_Payment_Type__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It specifies the manner in which the distribution should be made. (The &apos;periodic RMD as calculated&apos; option should only be selected for plans and circumstances where the required minimum distribution calculation applies, subject to financial institution policy.)</description>
    <inlineHelpText>Specifies the manner in which the distribution should be made.</inlineHelpText>
    <label>Distribution Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Periodic</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Periodic RMD as calculated (Traditional or SIMPLE only)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>