force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Durable_Agency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Durable_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. A durable agency grants a continuing power of attorney after legal incapacitation of an individual which terminiates only upon the individual&apos;s death.</description>
    <inlineHelpText>The authority granted to the deputy/agent on the safe deposit box lease is a durable power continuing after legal incapacity and terminating only at death of the appointing renter.</inlineHelpText>
    <label>Durable Agency</label>
    <type>Checkbox</type>
</CustomField>