force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Employee_Deposit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Employee_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users manually populate this optional checkbox field to specify when a deposit belongs to an employee of the financial institution. By default, it is false.</description>
    <inlineHelpText>This field specifies when a deposit belongs to an employee of the financial institution.</inlineHelpText>
    <label>Employee Deposit</label>
    <type>Checkbox</type>
</CustomField>