force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Enable_Portal_Documents__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Enable_Portal_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this optional boolean field to indicate that the deposit translation needs portal-enabled documents.</description>
    <inlineHelpText>The system automatically populates this checkbox when the deposit translation needs portal-enabled documents.</inlineHelpText>
    <label>Enable Portal Documents</label>
    <type>Checkbox</type>
</CustomField>