force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Financial_Institution_Authorized_Signer__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Financial_Institution_Authorized_Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Financial Institution Authorized Signer</description>
    <inlineHelpText>Select the authorized signer for your financial institution.</inlineHelpText>
    <label>Financial Institution Authorized Signer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>