force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Funding_Amount__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is the funding amount for a deposit product.</description>
    <label>Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>