force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Funding_Method__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Funding_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional and can be collected as part of a workflow. It is the funding method for a deposit.</description>
    <label>Funding Method</label>
    <referenceTo>LLC_BI__Funding_Method__c</referenceTo>
    <relationshipLabel>Deposits</relationshipLabel>
    <relationshipName>Deposits</relationshipName>
    <type>Lookup</type>
</CustomField>