force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Initial_Deposit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Deposit__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. This currency field is used to specify the amount of the initial deposit.</description>
    <label>Initial Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>