force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Initial_Interest_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Interest_Rate_Type__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It specifies what kind of rate is used to determine the initial rate of interest on the account.</description>
    <inlineHelpText>Specifies what kind of rate is used to determine the initial rate of interest on the account.</inlineHelpText>
    <label>Initial Interest Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>