force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Initial_Rate_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Rate_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true, an initial rate (for example, a teaser rate) was applied to the account.</description>
    <inlineHelpText>If true an initial rate (i.e. a teaser rate) was applied to the account.</inlineHelpText>
    <label>Initial Rate Indicator</label>
    <type>Checkbox</type>
</CustomField>