force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Initial_Rate_Margin__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Rate_Margin__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is the percentage that is added to the index rate to determine the initial (teaser) rate.</description>
    <inlineHelpText>The percentage that is added to the index rate to determine the initial (teaser) rate.</inlineHelpText>
    <label>Initial Rate Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>