force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Interest_Payment_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Payment_Method_Type__c</fullName>
    <description>This picklist field is populated during the deposit account opening process. The picklist values are the methods of payment (to the account owner) of the earned interest or dividends on an interest bearing or dividend earning certificate account. The frequency of payment is separately indicated. When applicable, the account number to be credited and the ABA number of the receiving financial institution is required.</description>
    <label>Interest Payment Method Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add to Principal</fullName>
            </value>
            <value>
                <fullName>Receive Periodic Check</fullName>
            </value>
            <value>
                <fullName>Credit Account</fullName>
            </value>
            <value>
                <fullName>Credit Account at other financial institution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>