force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Interest_Rate_Margin_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Rate_Margin_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true, a margin is used in determining the interest rate for a variable rate account.</description>
    <inlineHelpText>If true a margin is used in determining the interest rate for a variable rate account.</inlineHelpText>
    <label>Interest Rate Margin Indicator</label>
    <type>Checkbox</type>
</CustomField>