force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__Interest_Withdrawal_Required__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Withdrawal_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true, accrued earnings are required to be distributed out of the account.</description>
    <inlineHelpText>If true accrued earnings are required to be distributed out of the account.</inlineHelpText>
    <label>Interest Withdrawal Required</label>
    <type>Checkbox</type>
</CustomField>