force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__IRA_Is_Self_Directed__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRA_Is_Self_Directed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and can be collected as part of a workflow. If true, the IRA is self-directed.</description>
    <inlineHelpText>If true the IRA is self-directed.</inlineHelpText>
    <label>IRA is Self-Directed</label>
    <type>Checkbox</type>
</CustomField>