force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__IRA_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRA_Plan_Type__c</fullName>
    <description>Users populate this optional picklist field with the type of tax-favored account (TFA) they want to open. By default, it is blank.</description>
    <inlineHelpText>Specifies the type of IRA plan being opened. This information should always be passed.</inlineHelpText>
    <label>TFA Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traditional IRA</fullName>
            </value>
            <value>
                <fullName>Roth IRA</fullName>
            </value>
            <value>
                <fullName>Health Savings Account</fullName>
            </value>
            <value>
                <fullName>Coverdell Education Savings Account</fullName>
            </value>
            <value>
                <fullName>SIMPLE IRA</fullName>
            </value>
            <value>
                <fullName>Traditional Beneficiary IRA</fullName>
            </value>
            <value>
                <fullName>Roth Beneficiary IRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>