force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__IRA_Recharacterization_Initial_Cont_Amt__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRA_Recharacterization_Initial_Cont_Amt__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is the initial contribution amount of the assets being recharacterized.</description>
    <inlineHelpText>The initial contribution amount of the assets being recharacterized.</inlineHelpText>
    <label>IRA Recharacterization Initial Cont Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>