force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__IRA_Recharacterization_Initial_Cont_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRA_Recharacterization_Initial_Cont_Date__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It is the initial contribution date of the assets being recharacterized.</description>
    <inlineHelpText>The initial contribution date of the assets being recharacterized.</inlineHelpText>
    <label>IRA Recharacterization Initial Cont Date</label>
    <type>Date</type>
</CustomField>