force-app/main/default/objects/LLC_BI__Deposit__c/fields/LLC_BI__IRA_Recharacterization_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__IRA_Recharacterization_Type__c</fullName>
    <description>This field is optional and can be collected as part of a workflow. It specifies the type of recharacterization.</description>
    <inlineHelpText>Specifies the type of recharacterization.</inlineHelpText>
    <label>IRA Recharacterization Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traditional to Roth</fullName>
            </value>
            <value>
                <fullName>Roth to Traditional</fullName>
            </value>
            <value>
                <fullName>Roth conversion back to Traditional or SIMPLE</fullName>
            </value>
            <value>
                <fullName>Erroneous rollover or transfer from Traditional to SIMPLE and back to Traditional</fullName>
            </value>
            <value>
                <fullName>Roth rollover or direct rollover from an ERP to Traditional</fullName>
            </value>
            <value>
                <fullName>Roth beneficiary direct rollover from an ERP to traditional beneficiary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>